sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:22: error: not found: value l
      echange(l+1,j);
              ^